--- a/template/index.html
+++ b/template/index.html
@@ -9,15 +9,15 @@
     
     <!-- Javascript Includes -->
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js" defer></script>
-    <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin defer></script>
-    <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin defer></script>
+    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin defer></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin defer></script>
     
     <!-- React Imports -->
     <script src="src/tags.js" defer></script>
     <script src="src/tags/markdown.js" defer></script>
 
     <!-- Template JS Modules -->
-    <script src="src/loadContent" defer></script>
+    <script src="src/loadContent.js" defer></script>
 
     <!-- Main Module -->
     <!-- I did look at browserify and webpack, but nothing is grunt compliant pre ES6 -->
