Dusting off the old repo

--- a/template/index.html
+++ b/template/index.html
@@ -22,6 +22,7 @@
 
     <!-- Main Module -->
     <!-- I did look at browserify and webpack, but nothing is grunt compliant pre ES6 -->
+    <!-- So ordering of the javascript files will remain important -->
     <script src="src/main.js" defer onload="main()"></script>
 </head>
 <body>
