Added Slides Component Fixed Documentation to better reflect project

--- a/template/index.html
+++ b/template/index.html
@@ -14,8 +14,9 @@
     
     <!-- React Imports -->
     <script src="src/tags.js" defer></script>
-    <script src="src/tags/markdown.js" defer></script>
+    <script src="src/tags/MarkDown.js" defer></script>
     <script src="src/tags/NavHeader.js" defer></script>
+    <script src="src/tags/Slides.js" defer></script>
 
     <!-- Template JS Modules -->
     <script src="src/loadContent.js" defer></script>
