Everything but Slide Functionality

--- a/template/index.html
+++ b/template/index.html
@@ -25,6 +25,11 @@
     <!-- I did look at browserify and webpack, but nothing is grunt compliant pre ES6 -->
     <!-- So ordering of the javascript files will remain important -->
     <script src="src/main.js" defer onload="main()"></script>
+
+    <!-- Stylesheets || May Want to replace this with a bootstrap template -->
+    <link href="style/style.css" rel="stylesheet" type="text/css" />
+    <!-- Having some fun with fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Merriweather|Roboto+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- React requires one to never append to the body container -->
