Cleaned up scripts and READMEs for better introduction experience

--- a/template/index.html
+++ b/template/index.html
@@ -13,14 +13,27 @@
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin defer></script>
     
     <!-- React Imports -->
-    <script src="src/tags.js" defer></script>
-    <script src="src/tags/MarkDown.js" defer></script>
+    <script src="src/tags/MarkedDown.js" defer></script>
     <script src="src/tags/NavHeader.js" defer></script>
     <script src="src/tags/Slides.js" defer></script>
 
     <!-- Template JS Modules -->
     <script src="src/loadContent.js" defer></script>
+    <script src="src/tagsModuleRegistry.js" defer></script>
 
+    <!--                                            -->
+    <!--    Place your JSX Includes HERE!!!!        -->
+    <!--
+
+    <script src="src/YOURNAMEHERE.js" defer></script> 
+
+                                                    -->
+    <script src="src/indexTags.js" defer></script>
+
+
+    <!--                                            -->
+
+    
     <!-- Main Module -->
     <!-- I did look at browserify and webpack, but nothing is grunt compliant pre ES6 -->
     <!-- So ordering of the javascript files will remain important -->
